# sps-game-automation

./: .gitignore  ADB_OFFICIAL_INSTALL.md  ARCHITECTURE.md  DEVELOPMENT_CONSTRAINTS.md  MINIMAL_ARCHITECTURE.md  README.md  WINDOWS_SETUP.md  config.yaml  fix_adb_install.bat  install_adb.bat  main.py  pyproject.toml  quick_start.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_with_full_path.bat  run_with_uv.ps1  setup_and_run.cmd  setup_uv.bat  test_connection.py  test_mumu_direct.py
core/: __init__.py  game.py  utils.py
core/config/: __init__.py  config.py
core/drivers/: __init__.py  adb_driver.py  capture_driver.py  input_driver.py
core/events/: __init__.py  event_bus.py
core/monitoring/: __init__.py  monitor.py
